--- a/frontend/Watch-Realm/src/index.css
+++ b/frontend/Watch-Realm/src/index.css
@@ -22,10 +22,23 @@
   --color-contrastText-secondary: #fbfaf5;
   --color-contrastText-primary: #2c2a29;
   --color-accent-secondary: #f1dde2;
-  --color-accent-primary: #74293d;
   --color-highlight-dark: #cbbbaa;
   --color-highlight-light: #f3eae2;
   --color-highlight-default: #e4d3c3;
+
+  --color-accent-primary: #74293d;
+  /* --color-primary-default: oklch(0.9815 0.0455 103.17);
+  --color-primary-light: oklch(0.993 0.0235 104.23);
+  --color-secondary-dark: oklch(0.8845 0.0385 81.5);
+  --color-secondary-default: oklch(0.9671 0.0352 85.41);
+  --color-secondary-light: oklch(0.9835 0.0171 84.59);
+  --color-contrastText-secondary: oklch(0.9845 0.0067 97.35);
+  --color-contrastText-primary: oklch(0.2868 0.0034 48.61);
+  --color-accent-secondary: oklch(0.9151 0.0229 0.56);
+  --color-accent-primary: oklch(0.3971 0.1067 6.93);
+  --color-highlight-dark: oklch(0.8008 0.0297 69.08);
+  --color-highlight-light: oklch(0.9419 0.0145 64.34);
+  --color-highlight-default: oklch(0.8764 0.0288 65.73); */
 }
 
 @layer base {
@@ -35,7 +48,8 @@
   }
 
   body {
-    color: #1f2937;
+    color: #000;
+    /* color: #1f2937; */
     /* font-family: 'Nunito Sans'; */
     font-family: var(--font-JosefinSans);
     height: 100%;
@@ -67,7 +81,11 @@
   border-radius: 5px;
 }
 
-.heading::after {
+.heading {
+  @apply w-full after:absolute after:w-[5%] after:h-[1.3px] after:bottom-[5px] after:left-1/2 after:bg-accent-primary after:-translate-1/2;
+}
+
+/* .heading::after {
   content: '';
   position: absolute;
   width: 5%;
@@ -76,7 +94,7 @@
   left: 50%;
   background-color: var(--color-accent-primary);
   transform: translate(-50%, -50%);
-}
+} */
 
 /*Range Reset*/
 input[type='range'] {
